--- a/package.json
+++ b/package.json
@@ -25,10 +25,15 @@
     ]
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "1.0.4",
     "@radix-ui/react-icons": "1.3.0",
+    "@radix-ui/react-select": "2.0.0",
     "@radix-ui/react-slot": "1.0.2",
+    "@radix-ui/react-toggle": "1.0.3",
+    "@radix-ui/react-toggle-group": "1.0.4",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.0",
+    "lucide-react": "0.330.0",
     "next": "14.1.0",
     "next-themes": "0.2.1",
     "react": "18.2.0",
