--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@radix-ui/react-slot": "1.0.2",
     "@radix-ui/react-toggle": "1.0.3",
     "@radix-ui/react-toggle-group": "1.0.4",
+    "@tanstack/react-query": "5.20.5",
+    "@tanstack/react-query-devtools": "5.20.5",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.0",
     "lucide-react": "0.330.0",
@@ -38,6 +40,7 @@
     "next-themes": "0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sharp": "0.33.2",
     "tailwind-merge": "2.2.1",
     "tailwindcss-animate": "1.0.7"
   },
