--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "@radix-ui/react-slot": "1.0.2",
     "@radix-ui/react-toggle": "1.0.3",
     "@radix-ui/react-toggle-group": "1.0.4",
+    "@radix-ui/react-tooltip": "1.0.7",
     "@tanstack/react-query": "5.20.5",
     "@tanstack/react-query-devtools": "5.20.5",
+    "axios": "1.6.7",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.0",
     "lucide-react": "0.330.0",
