(feat: search): integration

--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "react-dom": "18.2.0",
     "sharp": "0.33.2",
     "tailwind-merge": "2.2.1",
-    "tailwindcss-animate": "1.0.7"
+    "tailwindcss-animate": "1.0.7",
+    "zustand": "4.5.0"
   },
   "devDependencies": {
     "@commitlint/cli": "18.5.0",
